5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3999/executions/1745_1534.log
== TEST (2019-05-15 14:16:58) 
-- CODE:
x=float(input())
k=int(input())
tgh= x+(x**k)/k
i=0
while(-1<x<1 and k>0):
	i=x+(x**(2*k+1))/k+2*k+1
print(round(i,7))
-- ERROR:
File "XXXX", line 6
    if ( r = v):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:17:13) 
-- CODE:
x=float(input())
k=int(input())
tgh= x+(x**k)/k
i=0
while(-1<x<1 and k>0):
	i=x+(x**(2*k+1))/k+2*k+1
	print(round(i,7))
-- OUTPUT:
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
8.0374378
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:19:40) 
-- CODE:
x=float(input())
k=int(input())
tgh= x+(x**(2*k+1))/2*k+1
i=0
while(-1<x<1 and k>0):
	i=x+(x**(2*k+1))/k+2*k+1+tgh
	print(round(i,7))
-- OUTPUT:
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
10.5909078
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
